--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "16.8.3",
     "react-native": "0.59.5",
     "react-native-gesture-handler": "^1.2.1",
+    "react-native-splash-screen": "^3.2.0",
     "react-navigation": "^3.9.1"
   },
   "devDependencies": {
